Fix spacing on rows of cards past the first

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -215,7 +215,7 @@ ul {
     width: calc(33% - 40px - 1px);
     // height: 300px;
 
-    &:nth-of-type(2) {
+    &:nth-of-type(3n+2) {
       margin: 0 40px;
     }
   }
